<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:checkedButton="@id/radio_btn_male"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/gl_v_end"
        app:layout_constraintStart_toEndOf="@id/tv_gender"
        app:layout_constraintTop_toTopOf="@id/gl_h_top">

        <RadioButton
            android:id="@+id/radio_btn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_weight="1"
            android:text="@string/text_rbtn_male" />

        <RadioButton
            android:id="@+id/radio_btn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_weight="1"
            android:text="@string/text_rbtn_female" />

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_gender"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/gl_v_start"
        app:layout_constraintTop_toTopOf="@id/radioGroup" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_us_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="@id/gl_v_end"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_us_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_us_units"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sw_us_units"
        app:layout_constraintStart_toStartOf="@id/gl_v_start"
        app:layout_constraintTop_toTopOf="@id/sw_us_units" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/height_in_cm"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/gl_v_end"
        app:layout_constraintStart_toStartOf="@id/gl_v_start"
        app:layout_constraintTop_toBottomOf="@id/sw_us_units">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_48sdp"
            android:textSize="@dimen/_11ssp"
            android:inputType="number"
            android:maxLength="3"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/weight_in_kg"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/gl_v_end"
        app:layout_constraintStart_toStartOf="@id/gl_v_start"
        app:layout_constraintTop_toBottomOf="@id/til_height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_48sdp"
            android:textSize="@dimen/_11ssp"
            android:inputType="numberDecimal"
            android:maxLength="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/btn_calculate"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/gl_v_end"
        app:layout_constraintStart_toStartOf="@id/gl_v_start"
        app:layout_constraintTop_toBottomOf="@id/til_weight" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_result_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="@id/gl_v_end"
        app:layout_constraintStart_toStartOf="@id/gl_v_start"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        tools:text="Your BMI is 22.5 Kg/M^2 " />
</androidx.constraintlayout.widget.ConstraintLayout>